# fastCloud

./: .gitignore  README.md  Readme.md  pyproject.toml
docs/assets/: banner.html
fastCloud/: __init__.py
fastCloud/core/: __init__.py  cloud_storage_factory.py  i_fast_cloud.py
fastCloud/core/api_providers/: HTTPClientManager.py  __init__.py  i_upload_api.py  replicate.py  socaity.py
fastCloud/core/providers/: azure_storage.py  s3_storage.py
fastCloud/core/storage_providers/: azure_storage.py  i_cloud_storage.py  s3_storage.py
fastCloud/test/: test.py
test/: test.py
