[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcloud"
version = "0.0.14"
description = "Upload and download files to common cloud providers like azure blob storage, s3 and more"
requires-python = ">=3.8"
license = "GPL-3.0-only"
authors = [
    { name = "SocAIty" }
]
readme = "README.md"
dependencies = [
    "media-toolkit>=0.2.19",
    "httpx"
]

[project.optional-dependencies]
azure = [
    "azure-storage-blob"
]

s3 = [
    "boto3",
    "aioboto3",
    "botocore"
]

[project.urls]
Repository = "https://github.com/SocAIty/fastCloud"
Homepage = "https://www.socaity.ai"